# mofa

./: Unified Inference Orchestrator for MoFA.docx
crates/mofa-foundation/: Cargo.toml
crates/mofa-foundation/src/: lib.rs
crates/mofa-foundation/src/orchestrator/: backend.rs  cloud_openai.rs  local_candle.rs  local_llama.rs  mod.rs  pool.rs  router.rs  telemetry.rs  types.rs
crates/mofa-foundation/tests/: benchmark.rs
examples/: Cargo.toml
examples/deep_research_agent/: Cargo.toml
examples/deep_research_agent/src/: main.rs
